--- a/coaches.htm
+++ b/coaches.htm
@@ -18,114 +18,67 @@
 		<div class="left"></div>
 		<div class="middle">
 			<div class="contentheader">2019 Coaches</div>
-			<table align="center" height="605" border="0" id="table3">
-				<tbody>
-					<tr>
-						<td><b class="style1">J. J. Wannamaker</b> - (Head Coach, Hurdles)</td>
-					</tr>
-					<tr>
-						<td>(913) 993-7594</td>
-					</tr>
-					<tr>
-						<td><a class="slink" href="mailto:sowannam@smsd.org">sowannam@smsd.org</a></td>
-					</tr>
-					<tr>
-						<td>
-							<a href="https://twitter.com/SMSWannamaker" class="twitter-follow-button"
-								data-show-count="false" data-dnt="true">Follow
-								@SMSWannamaker</a>
-							<script>
-								! function (d, s, id) {
-									var js, fjs = d.getElementsByTagName(s)[0],
-										p = /^http:/.test(d.location) ? 'http' : 'https';
-									if (!d.getElementById(id)) {
-										js = d.createElement(s);
-										js.id = id;
-										js.src = p + '://platform.twitter.com/widgets.js';
-										fjs.parentNode.insertBefore(js, fjs);
-									}
-								}(document, 'script', 'twitter-wjs');
-							</script>
-						</td>
-					</tr>
-					<tr>
-						<td>&nbsp;</td>
-					</tr>
-					<tr>
-						<td><b class="style1">Elayna Briggs</b> - (Pole Vault)</td>
-					</tr>
-					<tr>
-						<td><a class="slink" href="mailto:briggse596@gmail.com">briggse596@gmail.com</a></td>
-					</tr>
-					<tr>
-						<td>&nbsp;</td>
-					</tr>
-					<tr>
-						<td><b class="style1">Jake Caldwell</b></td>
-					</tr>
-					<tr>
-						<td><a class="slink" href="mailto:jakecaldwell@smsd.org">jakecaldwell@smsd.org</a></td>
-					</tr>
-					<tr>
-						<td>&nbsp;</td>
-					</tr>
-					<tr>
-						<td><b class="style1">Aaron Dean</b> - (Javelin)</td>
-					</tr>
-					<tr>
-						<td><a class="slink" href="mailto:AaronDean@smsd.orgm">AaronDean@smsd.org</a></td>
-					</tr>
-					<tr>
-						<td>&nbsp;</td>
-					</tr>
-					<tr>
-						<td><b class="style1">Kailey Groves</b> - (Sprints)</td>
-					</tr>
-					<!--tr>
-					<td>(913) 993-2453</td>
-				</tr-->
-					<tr>
-						<td><a class="slink" href="mailto:KaileyGroves@smsd.org">KaileyGroves@smsd.org</a></td>
-					</tr>
-					<tr>
-						<td>&nbsp;</td>
-					</tr>
-					<tr>
-						<td><b class="style1">Suni Haberland</b> - (High Jump, JV Sprints)</td>
-					</tr>
-					<tr>
-						<td><a class="slink" href="mailto:sunihaberland@smsd.org">sunihaberland@smsd.org</a></td>
-					</tr>
-					<tr>
-						<td>&nbsp;</td>
-					</tr>
-					<tr>
-						<td><b class="style1">D.J. Hilding</b><span class="style1"><b class="style1"></b></span> -
-							(Distance)</td>
-					</tr>
-					<tr>
-						<td>(913) 993-0633</td>
-					</tr>
-					<tr>
-						<td><a class="slink" href="mailto:dennishilding@smsd.org">dennishilding@smsd.org</a></td>
-					</tr>
-					<tr>
-						<td>&nbsp;</td>
-					</tr>
-					<tr>
-						<td><b class="style1">Clint Johnson</b> - (Discus, Shot)</td>
-					</tr>
-					<tr>
-						<td>
-							<a class="slink" href="mailto:coachcjohnson@gmail.com">
-								coachcjohnson@gmail.com</a>
-						</td>
-					</tr>
-				</tbody>
-			</table>
+			<div class="contenttext aligncenter">
+				<b>J. J. Wannamaker</b><br>
+				(Head Coach, Hurdles)<br>
+				<div class="subcontentheader">
+					<a href="tel:9139937594">(913) 993-7594</a><br>
+					<a href="mailto:sowannam@smsd.org">sowannam@smsd.org</a>
+				</div>
+				<div><a href="https://twitter.com/SMSWannamaker" class="twitter-follow-button" data-show-count="false"
+						data-dnt="true">Follow
+						@SMSWannamaker</a>
+					<script>
+						! function (d, s, id) {
+							var js, fjs = d.getElementsByTagName(s)[0],
+								p = /^http:/.test(d.location) ? 'http' : 'https';
+							if (!d.getElementById(id)) {
+								js = d.createElement(s);
+								js.id = id;
+								js.src = p + '://platform.twitter.com/widgets.js';
+								fjs.parentNode.insertBefore(js, fjs);
+							}
+						}(document, 'script', 'twitter-wjs');
+					</script>
+				</div>
+				<br>
+				<b>Elayna Briggs</b><br>
+				(Pole Vault)<br>
+				<div class="subcontentheader"><a href="mailto:briggse596@gmail.com">briggse596@gmail.com</a></div>
+				<br>
+				<b>Jake Caldwell</b><br>
+				<div class="subcontentheader"><a href="mailto:jakecaldwell@smsd.org">jakecaldwell@smsd.org</a></div>
+				<br>
+				<b>Aaron Dean</b><br>
+				(Javelin)<br>
+				<div class="subcontentheader"><a href="mailto:AaronDean@smsd.orgm">AaronDean@smsd.org</a></div>
+				<br>
+				<b>Kailey Groves</b><br>
+				(Sprints)<br>
+				<div class="subcontentheader"><a href="mailto:KaileyGroves@smsd.org">KaileyGroves@smsd.org</a></div>
+				<br>
+				<b>Suni Haberland</b><br>
+				(High Jump, JV Sprints)<br>
+				<div class="subcontentheader"><a href="mailto:sunihaberland@smsd.org">sunihaberland@smsd.org</a></div>
+				<br>
+				<b>D.J. Hilding</b><br>
+				(Distance)<br>
+				<div class="subcontentheader"><a href="tel:9139930633">(913) 993-0633</a><br>
+				<a href="mailto:dennishilding@smsd.org">dennishilding@smsd.org</a>
+			</div>
+			<br>
+			<b>Clint Johnson</b><br>
+			(Discus, Shot)<br>
+			<div class="subcontentheader"><a href="mailto:coachcjohnson@gmail.com">
+					coachcjohnson@gmail.com</a></div>
+			<br>
+			<b>Joe Kennard</b><span><b></b></span><br>
+			<div class="subcontentheader"><a href="tel:9139937706">(913) 993-7706</a><br>
+				<a href="mailto:josephkennard@smsd.org">josephkennard@smsd.org</a></div>
 		</div>
-		<div class="right"></div>
-		<div class="footer"></div>
+	</div>
+	<div class="right"></div>
+	<div class="footer"></div>
 	</div>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 	<script>
