--- a/south_relays.htm
+++ b/south_relays.htm
@@ -21,6 +21,9 @@
 			<div class="contentheader">Shawnee Mission South Relays<br>2019</div>
 			<div class="subcontentheader">Saturday, March 30th
 				<p>
+					<a href="https://drive.google.com/open?id=1lmwHtfAec1e979jnpwQDhfRWtwsZSNk8" target="_blank">Schedule</a>
+				</p>
+				<p>
 					<a href="records/smsrelaysboys.htm">Meet Records</a></p>
 				<p>
 					<a target="_blank"
