--- a/records/boysfreshmanrecords.htm
+++ b/records/boysfreshmanrecords.htm
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta
       name="description"
-      content="Shawnee Mission South High School Track &amp; Field"
+      content="Boys all-time freshman class records"
     />
     <meta
       name="keywords"
