--- a/records/smsrelaysboys.htm
+++ b/records/smsrelaysboys.htm
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta
       name="description"
-      content="Shawnee Mission South High School Track &amp; Field"
+      content="Shawnee Mission South Relays boys all-time meet records"
     />
     <meta
       name="keywords"
