--- a/schedule.htm
+++ b/schedule.htm
@@ -3,8 +3,7 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta name="description" content="Shawnee Mission South Track &amp; Field Schedule and Results" />
-	<meta name="description" content="Shawnee Mission South High School Track &amp; Field" />
+	<meta name="description" content="Meet schedule with directions and results" />
 	<meta name="keywords" content="shawnee mission south track, south track, sms track, south track &amp; field" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
