--- a/south_relays.htm
+++ b/south_relays.htm
@@ -3,7 +3,7 @@
 
 <head>
 	<meta http-equiv="Content-Language" content="en-us">
-	<meta name="description" content="Shawnee Mission South High School Track &amp; Field">
+	<meta name="description" content="Shawnee Mission South Relays schedule, results and records">
 	<meta name="keywords" content="shawnee mission south track, south track, sms track, south track &amp; field">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link rel="stylesheet" type="text/css" href="/css/sms.css">
