--- a/index.htm
+++ b/index.htm
@@ -69,12 +69,12 @@
 		<div class="left relaysbanner"></div>
 		<div class="middle">
 			<div class="contenttext aligncenter">
-				<div id="newsDisplay" style="display: none;"></div>
+				<div class="page" id="newsDisplay" style="display: none;"></div>
 				<div id="countdownDisplay" style="display: none;" class="style37">
 					<div id="countdownDisplayTitle"></div><br>	
 					<div id="defaultCountdown"></div>
 				</div>
-				<div id="scheduleDisplay" style="display: none;"></div>
+				<div class="page" id="scheduleDisplay" style="display: none;"></div>
 			</div>
 		</div>
 		<div class="right">
