--- a/schedule.htm
+++ b/schedule.htm
@@ -21,15 +21,14 @@
 		<div class="middle">
 			<div id="title" class="contentheader"></div>
 			<div id="sched"></div>
-			<div class="schedlink">
-				Open in Google Calendar
+			<br>
+			<div class="schedlink page">
 				<a href="https://www.google.com/calendar/embed?src=smsraidertrack%40gmail.com&ctz=America/Chicago" target="_blank">
-					<i class="material-icons schedicons">open_in_new</i>
+					Open in Google Calendar<i class="material-icons schedicons">open_in_new</i>
 				</a>
 				<br>
-				Outlook Import
 				<a href="https://www.google.com/calendar/ical/smsraidertrack%40gmail.com/public/basic.ics" target="_blank">
-				  <i class="material-icons schedicons">file_download</i>
+					Outlook Import<i class="material-icons schedicons">file_download</i>
 				</a>
 			</div>
 		</div>
