--- a/index.htm
+++ b/index.htm
@@ -48,7 +48,7 @@
 		}	
 	</script>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta name="description" content="Home of the Shawnee Mission South high school track &amp; field team">
+	<meta name="description" content="Official Home of the Shawnee Mission South high school track &amp; field team">
 	<meta name="keywords" content="shawnee mission south track, south track, sms track, south track &amp; field">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
