--- a/honors.htm
+++ b/honors.htm
@@ -7,6 +7,7 @@
 	<meta name="keywords" content="shawnee mission south track, south track, sms track, south track &amp; field">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link rel="stylesheet" type="text/css" href="/css/sms.css">
+	<link rel="stylesheet" type="text/css" href="/css/honors.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Honors</title>
 </head>
@@ -17,32 +18,31 @@
 		<div class="mainmenu menubar"></div>
 		<div class="left"></div>
 		<div class="middle">
-			<div class="contentheader">2018 Post-Season Honors</div>
-			<table bordercolor="#2e4d47" width="244" align="center" class="style56" style="display:none">
+			<div class="contentheader">2019 Post-Season Honors</div>
+			<table style="display:none">
 				<tr>
-					<td width="230">
-						<h2 align="center" class="contentheader">All-Metro</h2>
+					<td>
+						<h2>All-Metro</h2>
 					</td>
 				</tr>
 				<tr>
-					<td width="230" align="center" class="style1m"><b>Honorable Mention</b></td>
+					<td><b>Honorable Mention</b></td>
 				</tr>
 				<tr>
-					<td width="230" align="center">
+					<td>
 						Danielle Reichart - <em>300 Hurdles</em>
 					</td>
 				</tr>
 			</table>
 
-			<table style="display:block" bordercolor="#2e4d47" width="244" align="center" class="style56">
+			<table>
 				<tr>
-					<td width="230">
-						<h2 align="center" class="contentheader">All-Sunflower<br>
-							League</h2>
-					</td>
+					<th colspan="2">
+						<h2>All-Sunflower League</h2>
+					</th>
 				</tr>
 
-				<tr>
+				<!-- <tr>
 					<td width="230" align="center" class="style1m"><b>1st Team</b></td>
 				</tr>
 
@@ -53,17 +53,30 @@
 				</tr>
 				<tr>
 					<td>&nbsp;</td>
+				</tr> -->
+				<tr>
+					<th colspan="2"><b>2nd Team</b></th>
+				</tr>
+
+				<tr>
+					<td>Jack Roberts</td><td><em>Long Jump</em></td>
 				</tr>
 				<tr>
+					<td>Kirsten Womack</td><td><em>Discus, Shot</em></td>
+				</tr>
+				<tr>
+					<td>&nbsp;</td>
+				</tr>
+				<!-- <tr>
 					<td width="230" align="center" class="style1m"><b>Honorable Mention</b></td>
 				</tr>
 				<tr>
 					<td width="230" align="center">
 						Jacob Wheat - <em>3200</em><br>
 					</td>
-				</tr>
+				</tr> -->
 			</table>
-			<div class="style23" style="display:none">
+			<div style="display:none">
 				<em>*unanimous selection</em> </div>
 		</div>
 		<div class="right"></div>
