--- a/coaches.htm
+++ b/coaches.htm
@@ -17,7 +17,7 @@
 		<div class="mainmenu menubar"></div>
 		<div class="left"></div>
 		<div class="middle">
-			<div class="contentheader">2019 Coaches</div>
+			<div class="contentheader">2020 Coaches</div>
 			<div class="contenttext aligncenter">
 				<b>J. J. Wannamaker</b><br>
 				(Head Coach, Hurdles)<br>
@@ -53,6 +53,9 @@
 				(Javelin)<br>
 				<div class="subcontentheader"><a href="mailto:AaronDean@smsd.orgm">AaronDean@smsd.org</a></div>
 				<br>
+				<b>Patrick Grant</b><br>
+				<div class="subcontentheader"><a href="mailto:patrickgrant@smsd.orgg">patrickgrant@smsd.org</a></div>
+				<br>
 				<b>Kailey Groves</b><br>
 				(Sprints)<br>
 				<div class="subcontentheader"><a href="mailto:KaileyGroves@smsd.org">KaileyGroves@smsd.org</a></div>
@@ -64,21 +67,17 @@
 				<b>D.J. Hilding</b><br>
 				(Distance)<br>
 				<div class="subcontentheader"><a href="tel:9139930633">(913) 993-0633</a><br>
-				<a href="mailto:dennishilding@smsd.org">dennishilding@smsd.org</a>
+					<a href="mailto:dennishilding@smsd.org">dennishilding@smsd.org</a>
+				</div>
+				<br>
+				<b>Joe Kennard</b><br>
+				(Discus, Shot)<br>
+				<div class="subcontentheader"><a href="tel:9139937706">(913) 993-7706</a><br>
+					<a href="mailto:josephkennard@smsd.org">josephkennard@smsd.org</a></div>
 			</div>
-			<br>
-			<b>Clint Johnson</b><br>
-			(Discus, Shot)<br>
-			<div class="subcontentheader"><a href="mailto:coachcjohnson@gmail.com">
-					coachcjohnson@gmail.com</a></div>
-			<br>
-			<b>Joe Kennard</b><span><b></b></span><br>
-			<div class="subcontentheader"><a href="tel:9139937706">(913) 993-7706</a><br>
-				<a href="mailto:josephkennard@smsd.org">josephkennard@smsd.org</a></div>
 		</div>
-	</div>
-	<div class="right"></div>
-	<div class="footer"></div>
+		<div class="right"></div>
+		<div class="footer"></div>
 	</div>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 	<script>
