--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,5 @@
 <p><em>Home of the Shawnee Mission South Raiders Track & Field Team</em></p>
+<p class="boosterclub"><a href="https://smstrackandfieldboosterclub.weebly.com/">SMST&F BOOSTER CLUB</a></p>
 <form action="https://www.paypal.com/cgi-bin/webscr"
   method="post"
   target="_blank">
