Updated Team Store Link

--- a/teammenu.html
+++ b/teammenu.html
@@ -2,5 +2,5 @@
 <a href="rules.htm">Rules</a>
 <a href="forms.htm">Forms</a>
 <a href="/throws/index.htm">Shot/Disc</a>
-<a href="https://smstf19.itemorder.com/sale?read_message=true"
+<a href="https://smsouthtrack2020.itemorder.com/sale"
   target="_blank">Team Gear</a>
