added link smsraiders.com

--- a/links.htm
+++ b/links.htm
@@ -21,16 +21,16 @@
 			<div class="contenttext">
 				<table border="0" id="table3">
 					<tr>
+						<td><a href="https://smsouthraiders.com/teams/2826197/track/varsity" target="_blank">Varsity Track @ smsraiders.com</a>
+						</td>
+					</tr>
+					<tr>
 						<td>
 							<p align="left">
 								<a target="_blank" href="http://smsxc.wordpress.com/" class="style1">Shawnee Mission
 									South
 									Cross Country</a>
 							</p>
-						</td>
-					</tr>
-					<tr>
-						<td>
 						</td>
 					</tr>
 					<tr>
