--- a/south_relays.htm
+++ b/south_relays.htm
@@ -18,8 +18,8 @@
 		<div class="mainmenu menubar"></div>
 		<div class="left"></div>
 		<div class="middle">
-			<div class="contentheader">Shawnee Mission South Relays<br>2020</div>
-			<div class="subcontentheader">Saturday, April 4th
+			<div class="contentheader">Shawnee Mission South Relays<br>2021</div>
+			<div class="subcontentheader">Saturday, April 3rd
 				<p>
 					<a href="https://drive.google.com/open?id=1lmwHtfAec1e979jnpwQDhfRWtwsZSNk8" target="_blank">Schedule</a>
 				</p>
