South Relays Schedule

--- a/south_relays.htm
+++ b/south_relays.htm
@@ -21,7 +21,7 @@
 			<div class="contentheader">Shawnee Mission South Relays<br>2021</div>
 			<div class="subcontentheader">Saturday, April 3rd
 				<p>
-					<a href="https://drive.google.com/open?id=1lmwHtfAec1e979jnpwQDhfRWtwsZSNk8" target="_blank">Schedule</a>
+					<a href="https://drive.google.com/file/d/1JPUqdHdFkVQ5Mo8L-B-ge659NjCk6QGJ/view?usp=sharing" target="_blank">Schedule</a>
 				</p>
 				<p>
 					<a href="records/smsrelaysboys.htm">Meet Records</a></p>
