--- a/coaches.htm
+++ b/coaches.htm
@@ -17,7 +17,7 @@
 		<div class="mainmenu menubar"></div>
 		<div class="left"></div>
 		<div class="middle">
-			<div class="contentheader">2020 Coaches</div>
+			<div class="contentheader">2021 Coaches</div>
 			<div class="contenttext aligncenter">
 				<b>J. J. Wannamaker</b><br>
 				(Head Coach, Hurdles)<br>
@@ -41,10 +41,6 @@
 						}(document, 'script', 'twitter-wjs');
 					</script>
 				</div>
-				<br>
-				<b>Elayna Briggs</b><br>
-				(Pole Vault)<br>
-				<div class="subcontentheader"><a href="mailto:briggse596@gmail.com">briggse596@gmail.com</a></div>
 				<br>
 				<b>Jake Caldwell</b><br>
 				<div class="subcontentheader"><a href="mailto:jakecaldwell@smsd.org">jakecaldwell@smsd.org</a></div>
@@ -74,8 +70,11 @@
 				(Discus, Shot)<br>
 				<div class="subcontentheader"><a href="tel:9139937706">(913) 993-7706</a><br>
 					<a href="mailto:josephkennard@smsd.org">josephkennard@smsd.org</a></div>
+				<br>
+				<b>Kaylin Murcek</b><br>
+				(Pole Vault)
+				<br>
 			</div>
-		</div>
 		<div class="right"></div>
 		<div class="footer"></div>
 	</div>
