relays page update

--- a/south_relays.htm
+++ b/south_relays.htm
@@ -20,7 +20,7 @@
 		<div class="middle">
 			<div class="contentheader">Shawnee Mission South Relays<br>2021</div>
 			<div class="subcontentheader">Saturday, April 3rd
-				<p>
+				<p style="display: none;">
 					<a href="https://drive.google.com/file/d/1JPUqdHdFkVQ5Mo8L-B-ge659NjCk6QGJ/view?usp=sharing" target="_blank">Schedule</a>
 				</p>
 				<p>
