post season honors

--- a/honors.htm
+++ b/honors.htm
@@ -18,7 +18,7 @@
 		<div class="mainmenu menubar"></div>
 		<div class="left"></div>
 		<div class="middle">
-			<div class="contentheader">2019 Post-Season Honors</div>
+			<div class="contentheader">2021 Post-Season Honors</div>
 			<table style="display:none">
 				<tr>
 					<td>
@@ -59,25 +59,39 @@
 				</tr>
 
 				<tr>
-					<td>Jack Roberts</td><td><em>Long Jump</em></td>
+					<td>Max Close</td>
+					<td><em>Shot</em></td>
 				</tr>
 				<tr>
-					<td>Kirsten Womack</td><td><em>Discus, Shot</em></td>
+					<td>Kirsten Womack</td>
+					<td><em>Discus</em></td>
 				</tr>
 				<tr>
 					<td>&nbsp;</td>
 				</tr>
-				<!-- <tr>
-					<td width="230" align="center" class="style1m"><b>Honorable Mention</b></td>
+				<tr>
+					<th colspan="2"><b>Honorable Mention</b></th>
 				</tr>
 				<tr>
-					<td width="230" align="center">
-						Jacob Wheat - <em>3200</em><br>
-					</td>
-				</tr> -->
+					<td>Max Close</td>
+					<td><em>Discus, Javelin</em></td>
+				</tr>
+				<tr>
+					<td>Hannah Gibson</td>
+					<td><em>3200</em></td>
+				</tr>
+				<tr>
+					<td>Sam Keir</td>
+					<td><em>200</em></td>
+				</tr>
+				<tr>
+					<td>Kirsten Womack</td>
+					<td><em>Discus</em></td>
+				</tr>
 			</table>
 			<div style="display:none">
-				<em>*unanimous selection</em> </div>
+				<em>*unanimous selection</em>
+			</div>
 		</div>
 		<div class="right"></div>
 		<div class="footer"></div>
@@ -96,8 +110,9 @@
 	</script>
 	<script type="text/javascript" src="https://www.statcounter.com/counter/counter.js"></script>
 	<noscript>
-		<div class="statcounter"><a title="web stats" href="https://statcounter.com/free-web-stats/" target="_blank"><img
-					class="statcounter" src="https://c.statcounter.com/3895026/0/c1dd7cc1/1/" alt="web stats"></a></div>
+		<div class="statcounter"><a title="web stats" href="https://statcounter.com/free-web-stats/"
+				target="_blank"><img class="statcounter" src="https://c.statcounter.com/3895026/0/c1dd7cc1/1/"
+					alt="web stats"></a></div>
 	</noscript>
 	<!-- End of StatCounter Code for Default Guide -->
 </body>
