--- a/south_relays.htm
+++ b/south_relays.htm
@@ -18,8 +18,8 @@
 		<div class="mainmenu menubar"></div>
 		<div class="left"></div>
 		<div class="middle">
-			<div class="contentheader">Shawnee Mission South Relays<br>2021</div>
-			<div class="subcontentheader">Saturday, April 3rd
+			<div class="contentheader">Shawnee Mission South Relays<br>2022</div>
+			<div class="subcontentheader">Saturday, April 2nd
 				<p style="display: none;">
 					<a href="https://drive.google.com/file/d/1JPUqdHdFkVQ5Mo8L-B-ge659NjCk6QGJ/view?usp=sharing" target="_blank">Schedule</a>
 				</p>
