initial band changes

--- a/index.htm
+++ b/index.htm
@@ -101,9 +101,8 @@
 	<script src="https://www.google.com/jsapi"></script>
 	<script src="/js/schedfp.js"></script>
 	<script src="/js/frontpage.js"></script>
+	<script>src="/js/band.js"</script>
 	<script src="https://apis.google.com/js/client.js?onload=loadGoogleData"></script>
-	<script
-		src="https://www.googleapis.com/blogger/v3/blogs/484182122543119585/posts?callback=handleResponse&key=AIzaSyDPyjKbAMmWr1pexjS4iUPoq4W2EJUsFyE"></script>
 	<script>
 		$(".mainheader").load("/header.html");
 		$(".mainmenu").load("/mainmenu.html");
