--- a/news.htm
+++ b/news.htm
@@ -24,9 +24,8 @@
 		<div class="footer"></div>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-	<script src="/js/blogger.js"></script>
-	<script
-		src="https://www.googleapis.com/blogger/v3/blogs/484182122543119585/posts?callback=handleResponse&key=AIzaSyDPyjKbAMmWr1pexjS4iUPoq4W2EJUsFyE"></script>
+	<script src="/js/band.js"></script>
+	<script src="/js/bandnews.js"></scriptsrc></script>
 	<script>
 		$(".mainheader").load("/header.html");
 		$(".mainmenu").load("/mainmenu.html");
