--- a/index.htm
+++ b/index.htm
@@ -100,8 +100,8 @@
 	<script src="/js/jquery.countdown.min.js"></script>
 	<script src="https://www.google.com/jsapi"></script>
 	<script src="/js/schedfp.js"></script>
+	<script src="/js/band.js"></script>
 	<script src="/js/frontpage.js"></script>
-	<script>src="/js/band.js"</script>
 	<script src="https://apis.google.com/js/client.js?onload=loadGoogleData"></script>
 	<script>
 		$(".mainheader").load("/header.html");
