--- a/index.htm
+++ b/index.htm
@@ -78,8 +78,11 @@
 			</div>
 		</div>
 		<div class="right">
-			<div valign="top" class="style23 indexscroll scrollLine">
+			<!-- <div valign="top" class="style23 indexscroll scrollLine">
 				<script src="/js/vscroll.js"></script>
+			</div> -->
+			<div valign="top" id="calPanel" class="style23">
+				
 			</div>
 			<div class="style24 style28"
 				style="display:none; background: #0c6e45; text-align:center; font-family:sans-serif;font-weight:bold">
