css chnges for news

--- a/news.htm
+++ b/news.htm
@@ -18,7 +18,7 @@
 		<div class="left"></div>
 		<div class="middle">
 			<div class="contentheader">News</div>
-			<div id="newsList"></div>
+			<div class="newsitems" id="newsList"></div>
 		</div>
 		<div class="right"></div>
 		<div class="footer"></div>
