side panel update

--- a/index.htm
+++ b/index.htm
@@ -81,7 +81,7 @@
 			<!-- <div valign="top" class="style23 indexscroll scrollLine">
 				<script src="/js/vscroll.js"></script>
 			</div> -->
-			<div valign="top" id="calPanel" class="style23">
+			<div valign="top" id="rightPanel" class="style23">
 				
 			</div>
 			<div class="style24 style28"
