--- a/south_relays.htm
+++ b/south_relays.htm
@@ -20,8 +20,11 @@
 		<div class="middle">
 			<div class="contentheader">Shawnee Mission South Relays<br>2022</div>
 			<div class="subcontentheader">Saturday, April 2nd
-				<p style="display: none;">
-					<a href="https://drive.google.com/file/d/1JPUqdHdFkVQ5Mo8L-B-ge659NjCk6QGJ/view?usp=sharing" target="_blank">Schedule</a>
+				<p>
+					<a href="http://milesplit.live/meets/459870" target="_blank">Live Results</a>
+				</p>
+				<p style="display: block;">
+					<a href="https://docs.google.com/document/d/1D3ZbThIyqMBTs4lL370dfeya08TY6WCr/edit" target="_blank">Schedule</a>
 				</p>
 				<p>
 					<a href="records/smsrelaysboys.htm">Meet Records</a></p>
