New Season Updates

--- a/south_relays.htm
+++ b/south_relays.htm
@@ -18,19 +18,19 @@
 		<div class="mainmenu menubar"></div>
 		<div class="left"></div>
 		<div class="middle">
-			<div class="contentheader">Shawnee Mission South Relays<br>2022</div>
-			<div class="subcontentheader">Saturday, April 2nd
-				<p>
+			<div class="contentheader">Shawnee Mission South Relays<br>2023</div>
+			<div class="subcontentheader">Saturday, April 1st
+				<p style="display: none;">
 					<a href="http://milesplit.live/meets/459870" target="_blank">Live Results</a>
 				</p>
-				<p style="display: block;">
+				<p style="display: none;">
 					<a href="https://docs.google.com/document/d/1D3ZbThIyqMBTs4lL370dfeya08TY6WCr/edit" target="_blank">Schedule</a>
 				</p>
 				<p>
 					<a href="records/smsrelaysboys.htm">Meet Records</a></p>
-				<p>
+				<p style="display: none;">
 					<a target="_blank"
-						href="https://drive.google.com/file/d/1RwJGz9s2j1Pfi5MS_ihXVMbRZulCxYDu/view?usp=sharing">2021 Results</a>
+						href="https://drive.google.com/file/d/1RwJGz9s2j1Pfi5MS_ihXVMbRZulCxYDu/view?usp=sharing">2022 Results</a>
 				</p>
 			</div>
 		</div>
