--- a/left.html
+++ b/left.html
@@ -1,6 +1,6 @@
 <div onmouseover="" onclick="document.location.href='south_relays.htm'">
     <div class="relaysbannertext">
         <span class="style34"><strong>South Relays</strong></span>
-        <span class="style35"><strong><br>Saturday<br>April 2nd<br>2022</strong></span>
+        <span class="style35"><strong><br>Saturday<br>April 1st<br>2023</strong></span>
     </div>
 </div>
