--- a/coaches.htm
+++ b/coaches.htm
@@ -17,7 +17,7 @@
 		<div class="mainmenu menubar"></div>
 		<div class="left"></div>
 		<div class="middle">
-			<div class="contentheader">2022 Coaches</div>
+			<div class="contentheader">2023 Coaches</div>
 			<div class="contenttext aligncenter">
 				<b>J. J. Wannamaker</b><br>
 				(Head Coach, Hurdles)<br>
@@ -42,39 +42,40 @@
 					</script>
 				</div>
 				<br>
-				<b>Jake Caldwell</b><br>
-				<div class="subcontentheader"><a href="mailto:jakecaldwell@smsd.org">jakecaldwell@smsd.org</a></div>
-				<br>
 				<b>Aaron Dean</b><br>
 				(Javelin)<br>
-				<div class="subcontentheader"><a href="mailto:AaronDean@smsd.orgm">AaronDean@smsd.org</a></div>
+				<div class="subcontentheader"><a href="mailto:AaronDean@smsd.org">AaronDean@smsd.org</a></div>
+				<br>
+				<b>Kylee Dewey</b><br>
+				(Long Jump, Triple Jump, Pole Vault)
+				<div class="subcontentheader"><a href="mailto:kyleedewey@smsd.org">kyleedewey@smsd.org</a></div>
 				<br>
 				<b>Patrick Grant</b><br>
-				<div class="subcontentheader"><a href="mailto:patrickgrant@smsd.orgg">patrickgrant@smsd.org</a></div>
-				<br>
-				<b>Kailey Groves</b><br>
-				(Sprints)<br>
-				<div class="subcontentheader"><a href="mailto:KaileyGroves@smsd.org">KaileyGroves@smsd.org</a></div>
+				(Assistant Throws)<br>
+				<div class="subcontentheader"><a href="mailto:patrickgrant@smsd.org">patrickgrant@smsd.org</a></div>
 				<br>
 				<b>Suni Haberland</b><br>
 				(High Jump, JV Sprints)<br>
 				<div class="subcontentheader"><a href="mailto:sunihaberland@smsd.org">sunihaberland@smsd.org</a></div>
 				<br>
-				<b>D.J. Hilding</b><br>
-				(Distance)<br>
-				<div class="subcontentheader"><a href="tel:9139930633">(913) 993-0633</a><br>
-					<a href="mailto:dennishilding@smsd.org">dennishilding@smsd.org</a>
-				</div>
+				<b>Terrale Johnson</b><br>
+				(Long Jump, Triple Jump)
+				<div class="subcontentheader"><a href="mailto:terralejohnson@smsd.org">terralejohnson@smsd.org</a></div>
 				<br>
 				<b>Joe Kennard</b><br>
 				(Discus, Shot)<br>
-				<div class="subcontentheader"><a href="tel:9139937706">(913) 993-7706</a><br>
-					<a href="mailto:josephkennard@smsd.org">josephkennard@smsd.org</a></div>
+				<div class="subcontentheader"><a href="mailto:josephkennard@smsd.org">josephkennard@smsd.org</a>
+				</div>
 				<br>
-				<b>Kaylin Murcek</b><br>
-				(Pole Vault)
+				<b>Lisa Lauschke</b><br>
+				(Distance)<br>
+				<div class="subcontentheader"><a href="mailto:lisalauschke@smsd.org">lisalauschke@smsd.org</a></div>
 				<br>
-			</div>
+				<b>Kailey Zvosec</b><br>
+				(Sprints)<br>
+				<div class="subcontentheader"><a href="mailto:kaileyzvosec@smsd.org">kaileyzvosec@smsd.org</a></div>
+				<br>
+				<br>
 		<div class="right"></div>
 		<div class="footer"></div>
 	</div>
