Fix for hero icons

--- a/coaches.htm
+++ b/coaches.htm
@@ -25,7 +25,7 @@
 					<a href="tel:9139937594">(913) 993-7594</a><br>
 					<a href="mailto:sowannam@smsd.org">sowannam@smsd.org</a>
 				</div>
-				<div><a href="https://twitter.com/SMSWannamaker" class="twitter-follow-button" data-show-count="false"
+				<div><a href="https://twitter.com/SMSWannamaker" target="_blank" class="twitter-follow-button" data-show-count="false"
 						data-dnt="true">Follow
 						@SMSWannamaker</a>
 					<script>
