--- a/header.html
+++ b/header.html
@@ -1,33 +1,18 @@
 <div
   class="hero"
   onclick="location.href='/index.htm'"
-  style="cursor:pointer; z-index: 1"
 >
-  <div style="text-align: left">
-    <a
-      target="_blank"
-      href="https://twitter.com/search?q=from%3ASMSWannamaker+%23SMSTF&ref_src=twsrc%5Etfw"
-    >
-      <img
-        alt="Twitter Feed"
-        src="/images/Twitter_logo_blue_32.png"
-        width="32"
-        height="32"
-        class="style22"
-        halign="middle"
-      />
-    </a>
-
-    <a target="_blank" href="https://www.youtube.com/user/smsraidertrack">
-      <img
-        src="/images/youtube-icon-full_color_32.png"
-        alt="Youtube channel"
-        class="style22"
-        halign="middle"
-      />
-    </a>
+  <div class="heroiconlayer">
+    <img onclick="event.stopPropagation(); window.open('https://twitter.com/SMSWannamaker', '_blank')" alt="Twitter Feed"
+      src="/images/Twitter_logo_blue_32.png" class="style22" halign="middle" />
+  
+    <img onclick="event.stopPropagation(); window.open('https://www.instagram.com/sms_xc_tf/', '_blank')" alt="Instagram"
+      src="/images/Instagram32x32.png" class="style22" halign="middle" />
+  
+    <img onclick="event.stopPropagation(); window.open('https://www.youtube.com/user/smsraidertrack', '_blank')"
+      src="/images/youtube-icon-full_color_32.png" alt="Youtube channel" class="style22" halign="middle" />
   </div>
-      <div class="titletext">
-        Shawnee Mission South<br />Track & Field
+  <div class="titletext">
+    Shawnee Mission South<br />Track & Field
   </div>
-</div>
+  </div>
