--- a/index.htm
+++ b/index.htm
@@ -47,6 +47,7 @@
                 
 		}	
 	</script>
+	<meta name="msvalidate.01" content="AA439951EC1093B764769DE86D279CFA" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="description" content="Official Home of the Shawnee Mission South high school track &amp; field team">
 	<meta name="keywords" content="shawnee mission south track, south track, sms track, south track &amp; field">
