site map and canonical fixes

--- a/forms.htm
+++ b/forms.htm
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
+    <link rel="canonical" href="https://smstrack.org/forms.htm">
     <meta http-equiv="Content-Language" content="en-us" />
     <meta
       name="description"
