--- a/guidelines.htm
+++ b/guidelines.htm
@@ -2,6 +2,7 @@
 <html lang="en-us">
 
 <head>
+	<link rel="canonical" href="https://smstrack.org/guidelines.htm">
 	<meta http-equiv="Content-Language" content="en-us">
 	<meta name="description" content="Shawnee Mission South High School Track &amp; Field">
 	<meta name="keywords" content="shawnee mission south track, south track, sms track, south track &amp; field">
