--- a/index.htm
+++ b/index.htm
@@ -2,6 +2,7 @@
 <html lang="en-US">
 
 <head>
+	<link rel="canonical" href="https://smstrack.org">
 	<script type="application/ld+json">
 			{
 				"@context": "https://schema.org",
