--- a/schedule.htm
+++ b/schedule.htm
@@ -2,6 +2,7 @@
 <html lang="en-us">
 
 <head>
+	<link rel="canonical" href="https://smstrack.org/schedule.htm">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="description" content="Meet schedule with directions and results" />
 	<meta name="keywords" content="shawnee mission south track, south track, sms track, south track &amp; field" />
