--- a/throws/Top Ten Reasons to Throw the Discus.htm
+++ b/throws/Top Ten Reasons to Throw the Discus.htm
@@ -2,6 +2,7 @@
 <html lang="en-us">
 
 <head>
+	<link rel="canonical" href="https://smstrack.org/throws/Top%20Ten%20Reasons%20to%20Throw%20the%20Discus.htm">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="description" content="Shawnee Mission South High School Track &amp; Field" />
 	<meta name="keywords" content="shawnee mission south track, south track, sms track, south track &amp; field" />
