--- a/records/girlsfreshmanrecords.htm
+++ b/records/girlsfreshmanrecords.htm
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
+    <link rel="canonical" href="https://smstrack.org/records/girlsfreshmanrecords.htm">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta
       name="description"
