--- a/throws/index.htm
+++ b/throws/index.htm
@@ -2,6 +2,7 @@
 <html lang="en-US">
 
 <head>
+  <link rel="canonical" href="https://smstrack.org/throws/index.htm">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="description" content="Shawnee Mission South High School Track &amp; Field" />
   <meta name="keywords" content="shawnee mission south track, south track, sms track, south track &amp; field" />
