relays live results

--- a/south_relays.htm
+++ b/south_relays.htm
@@ -21,8 +21,8 @@
 		<div class="middle">
 			<div class="contentheader">Shawnee Mission South Relays<br>2023</div>
 			<div class="subcontentheader">Saturday, April 1st
-				<p style="display: none;">
-					<a href="http://milesplit.live/meets/459870" target="_blank">Live Results</a>
+				<p style="display: block;">
+					<a href="http://milesplit.live/meets/510625" target="_blank">Live Results</a>
 				</p>
 				<p style="display: none;">
 					<a href="https://docs.google.com/document/d/1D3ZbThIyqMBTs4lL370dfeya08TY6WCr/edit" target="_blank">Schedule</a>
