--- a/honors.htm
+++ b/honors.htm
@@ -18,7 +18,7 @@
 		<div class="mainmenu menubar"></div>
 		<div class="left"></div>
 		<div class="middle">
-			<div class="contentheader">2021 Post-Season Honors</div>
+			<div class="contentheader">2023 Post-Season Honors</div>
 			<table style="display:none">
 				<tr>
 					<td>
@@ -59,12 +59,12 @@
 				</tr>
 
 				<tr>
-					<td>Max Close</td>
-					<td><em>Shot</em></td>
+					<td>Kieron Smith</td>
+					<td><em>400m</em></td>
 				</tr>
 				<tr>
-					<td>Kirsten Womack</td>
-					<td><em>Discus</em></td>
+					<td>Aurora Wessel</td>
+					<td><em>100 Hurdles, 300 Hurdles</em></td>
 				</tr>
 				<tr>
 					<td>&nbsp;</td>
@@ -73,16 +73,12 @@
 					<th colspan="2"><b>Honorable Mention</b></th>
 				</tr>
 				<tr>
-					<td>Max Close</td>
-					<td><em>Discus, Javelin</em></td>
+					<td>Max Larson</td>
+					<td><em>3200m</em></td>
 				</tr>
 				<tr>
-					<td>Hannah Gibson</td>
-					<td><em>3200</em></td>
-				</tr>
-				<tr>
-					<td>Kirsten Womack</td>
-					<td><em>Discus</em></td>
+					<td>Boys</td>
+					<td><em>4x100 Relay</em></td>
 				</tr>
 			</table>
 			<div style="display:none">
