--- a/coaches.htm
+++ b/coaches.htm
@@ -18,10 +18,10 @@
 		<div class="mainmenu menubar"></div>
 		<div class="left"></div>
 		<div class="middle">
-			<div class="contentheader">2023 Coaches</div>
+			<div class="contentheader">2024 Coaches</div>
 			<div class="contenttext aligncenter">
 				<b>J. J. Wannamaker</b><br>
-				(Head Coach, Hurdles)<br>
+				(Head Coach, Distance, Pole Vault)<br>
 				<div class="subcontentheader">
 					<a href="tel:9139937594">(913) 993-7594</a><br>
 					<a href="mailto:sowannam@smsd.org">sowannam@smsd.org</a>
@@ -43,34 +43,35 @@
 					</script>
 				</div>
 				<br>
+				<b>Demetrious Baylis</b><br>
+				(Long Jump, Triple Jump)<br>
+				<br>
 				<b>Aaron Dean</b><br>
 				(Javelin)<br>
 				<div class="subcontentheader"><a href="mailto:AaronDean@smsd.org">AaronDean@smsd.org</a></div>
 				<br>
-				<b>Kylee Dewey</b><br>
-				(Long Jump, Triple Jump, Pole Vault)
-				<div class="subcontentheader"><a href="mailto:kyleedewey@smsd.org">kyleedewey@smsd.org</a></div>
+				<b>Gretchen Fiebig</b><br>
+				(Hurdles)<br>
 				<br>
 				<b>Patrick Grant</b><br>
-				(Assistant Throws)<br>
+				(Throws)<br>
 				<div class="subcontentheader"><a href="mailto:patrickgrant@smsd.org">patrickgrant@smsd.org</a></div>
 				<br>
 				<b>Suni Haberland</b><br>
 				(High Jump, JV Sprints)<br>
 				<div class="subcontentheader"><a href="mailto:sunihaberland@smsd.org">sunihaberland@smsd.org</a></div>
 				<br>
+				<b>Abra House</b><br>
+				(Distance)<br>
+				<br>
 				<b>Terrale Johnson</b><br>
-				(Long Jump, Triple Jump)
+				(Sprints)
 				<div class="subcontentheader"><a href="mailto:terralejohnson@smsd.org">terralejohnson@smsd.org</a></div>
 				<br>
 				<b>Joe Kennard</b><br>
 				(Discus, Shot)<br>
 				<div class="subcontentheader"><a href="mailto:josephkennard@smsd.org">josephkennard@smsd.org</a>
 				</div>
-				<br>
-				<b>Lisa Lauschke</b><br>
-				(Distance)<br>
-				<div class="subcontentheader"><a href="mailto:lisalauschke@smsd.org">lisalauschke@smsd.org</a></div>
 				<br>
 				<b>Kailey Zvosec</b><br>
 				(Sprints)<br>
