Records Updates and misc

--- a/records/smsrelaysboys.htm
+++ b/records/smsrelaysboys.htm
@@ -29,7 +29,7 @@
         <div class="contentheader">
           Records - South Relays Boys<br>
 			<span class="subcontentheader">
-				<a href="smsrelaysgirls.htm">(See Girls)</a>
+				<a href="smsrelaysgirls.htm">(Girls)</a>
 			</span>
         </div>
 		<div id="recordTable"></div>
