--- a/records/smsrelaysgirls.htm
+++ b/records/smsrelaysgirls.htm
@@ -29,7 +29,7 @@
         <div class="contentheader">
           Records - South Relays Girls<br>
 			<span class="subcontentheader">
-				<a href="smsrelaysboys.htm">(See Boys)</a>
+				<a href="smsrelaysboys.htm">(Boys)</a>
 			</span>
         </div>
 		<div id="recordTable"></div>
