records pages updates

--- a/records/boysfreshmanrecords.htm
+++ b/records/boysfreshmanrecords.htm
@@ -29,7 +29,7 @@
         <div class="contentheader">
           Records - Freshman Boys<br>
 			<span class="subcontentheader">
-				<a href="girlsfreshmanrecords.htm">(See Girls)</a>
+				<a href="girlsfreshmanrecords.htm">(Girls)</a>
 			</span>
         </div>
         <div id="recordTable"></div>
