--- a/records/girlsfreshmanrecords.htm
+++ b/records/girlsfreshmanrecords.htm
@@ -29,7 +29,7 @@
         <div class="contentheader">
           Records - Freshman Girls<br>
 			<span class="subcontentheader">
-				<a href="boysfreshmanrecords.htm">(See Boys)</a>
+				<a href="boysfreshmanrecords.htm">(Boys)</a>
 			</span>
         </div>
         <div id="recordTable"></div>
