--- a/coaches.htm
+++ b/coaches.htm
@@ -18,10 +18,10 @@
 		<div class="mainmenu menubar"></div>
 		<div class="left"></div>
 		<div class="middle">
-			<div class="contentheader">2024 Coaches</div>
+			<div class="contentheader">2025 Coaches</div>
 			<div class="contenttext aligncenter">
 				<b>J. J. Wannamaker</b><br>
-				(Head Coach, Distance, Pole Vault)<br>
+				(Head Coach, Distance)<br>
 				<div class="subcontentheader">
 					<a href="tel:9139937594">(913) 993-7594</a><br>
 					<a href="mailto:sowannam@smsd.org">sowannam@smsd.org</a>
@@ -46,6 +46,12 @@
 				<b>Demetrious Baylis</b><br>
 				(Long Jump, Triple Jump)<br>
 				<br>
+				<b>Sarah Bilhimer</b><br>
+				(Pole Vault)<br>
+				<br>
+				<b>Chase Biswell</b><br>
+				(Asst. Throws)<br>
+				<br>
 				<b>Aaron Dean</b><br>
 				(Javelin)<br>
 				<div class="subcontentheader"><a href="mailto:AaronDean@smsd.org">AaronDean@smsd.org</a></div>
@@ -53,28 +59,20 @@
 				<b>Gretchen Fiebig</b><br>
 				(Hurdles)<br>
 				<br>
-				<b>Patrick Grant</b><br>
-				(Throws)<br>
-				<div class="subcontentheader"><a href="mailto:patrickgrant@smsd.org">patrickgrant@smsd.org</a></div>
-				<br>
 				<b>Suni Haberland</b><br>
-				(High Jump, JV Sprints)<br>
+				(High Jump)<br>
 				<div class="subcontentheader"><a href="mailto:sunihaberland@smsd.org">sunihaberland@smsd.org</a></div>
-				<br>
-				<b>Abra House</b><br>
-				(Distance)<br>
-				<br>
-				<b>Terrale Johnson</b><br>
-				(Sprints)
-				<div class="subcontentheader"><a href="mailto:terralejohnson@smsd.org">terralejohnson@smsd.org</a></div>
 				<br>
 				<b>Joe Kennard</b><br>
 				(Discus, Shot)<br>
 				<div class="subcontentheader"><a href="mailto:josephkennard@smsd.org">josephkennard@smsd.org</a>
 				</div>
 				<br>
+				<b>Matt Schmoekel</b><br>
+				(Asst. Sprints)<br>
+				<br>
 				<b>Kailey Zvosec</b><br>
-				(Sprints)<br>
+				(Sprints, Relays)<br>
 				<div class="subcontentheader"><a href="mailto:kaileyzvosec@smsd.org">kaileyzvosec@smsd.org</a></div>
 				<br>
 				<br>
