--- a/south_relays.htm
+++ b/south_relays.htm
@@ -22,7 +22,7 @@
 			<div class="contentheader">Shawnee Mission South Relays<br>2025</div>
 			<div class="subcontentheader">Monday, April 7th
 				<p style="display: block;">
-					<a href="https://milesplit.live/meets/589866" target="_blank">2024 Results</a>
+					<a href="https://milesplit.live/meets/652939" target="_blank">Results</a>
 				</p>
 				<p style="display: none;">
 					<a href="https://docs.google.com/document/d/1D3ZbThIyqMBTs4lL370dfeya08TY6WCr/edit" target="_blank">Schedule</a>
